[feature] Project member refactor
