# gestepm-model/src/main/java/com/epm/gestepm/model/user/dao/entity/filter/UserFilter.java
@@ -37,6 +37,8 @@ public class UserFilter extends Orderable implements CollectableAttributes {
 
     private Integer leadingProjectId;
 
+    private Integer memberProjectId;
+
     @Override
     public AttributeMap collectAttributes() {
 
@@ -52,6 +54,7 @@ public class UserFilter extends Orderable implements CollectableAttributes {
         map.putList(ATTR_U_ROLE_IDS, this.roleIds);
         map.putList(ATTR_U_LEVEL_IDS, this.levelIds);
         map.put(ATTR_U_LEADING_PROJECT_ID, this.leadingProjectId);
+        map.put(ATTR_U_MEMBER_PROJECT_ID, this.memberProjectId);
 
         return map;
     }
