# gestepm-rest/src/main/java/com/epm/gestepm/rest/user/UserController.java
@@ -64,9 +64,9 @@ public class UserController extends BaseController implements UserV1Api,
     @LogExecution(operation = OP_READ)
     public ResponseEntity<ListUsersV1200Response> listUsersV1(final List<String> meta, final Boolean links, final Set<String> expand, final Long offset, final Long limit, final String order, final String orderBy,
                                                               final List<Integer> ids, final String nameContains, final String email, final String password, final List<Integer> activityCenterIds,
-                                                              final Integer state, final List<Integer> signingIds, final List<Integer> roleIds, final List<Integer> levelIds, final Integer leadingProjectId) {
+                                                              final Integer state, final List<Integer> signingIds, final List<Integer> roleIds, final List<Integer> levelIds, final Integer leadingProjectId, final Integer memberProjectId) {
 
-        final UserListRestRequest req = new UserListRestRequest(ids, nameContains, email, password, activityCenterIds, state, signingIds, roleIds, levelIds, leadingProjectId);
+        final UserListRestRequest req = new UserListRestRequest(ids, nameContains, email, password, activityCenterIds, state, signingIds, roleIds, levelIds, leadingProjectId, memberProjectId);
 
         this.setCommon(req, meta, links, expand);
         this.setDefaults(req);
