# gestepm-rest/src/main/java/com/epm/gestepm/rest/user/request/UserListRestRequest.java
@@ -35,4 +35,6 @@ public class UserListRestRequest extends RestRequest {
 
     private Integer leadingProjectId;
 
+    private Integer memberProjectId;
+
 }
